Add secret management to pom and database

--- a/integration-tests/cucumber-tests-platform-smartmetering/pom.xml
+++ b/integration-tests/cucumber-tests-platform-smartmetering/pom.xml
@@ -53,6 +53,11 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.javalite</groupId>
+      <artifactId>activejdbc</artifactId>
+      <version>1.4.13</version>
+    </dependency>
 
     <!-- Cucumber Framework -->
     <dependency>
@@ -154,6 +159,11 @@
       <artifactId>osgp-adapter-ws-smartmetering</artifactId>
       <classifier>classes</classifier>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.opensmartgridplatform</groupId>-->
+<!--      <artifactId>osgp-secret-management</artifactId>-->
+<!--      <classifier>classes</classifier>-->
+<!--    </dependency>-->
 
     <!-- Automatic tests platform -->
     <dependency>
