--- a/integration-tests/parent-integration-tests/pom.xml
+++ b/integration-tests/parent-integration-tests/pom.xml
@@ -145,6 +145,12 @@
         <version>${osgp.dlms.version}</version>
         <classifier>classes</classifier>
       </dependency>
+      <dependency>
+        <groupId>org.opensmartgridplatform</groupId>
+        <artifactId>osgp-secret-management</artifactId>
+        <version>${osgp.dlms.version}</version>
+        <classifier>classes</classifier>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
