Use generic keystore and truststore

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -1,8 +1,8 @@
 soapclient.use.client.auth=true
 #soapclient.default-uri=http://localhost:8080/osgp-secret-management/ws/SecretManagement
 soapclient.default-uri=https://localhost:443/osgp-secret-management/ws/SecretManagement
-soapclient.ssl.trust-store=file:/etc/ssl/certs/truststore.jks
-soapclient.ssl.key-store=file:/etc/ssl/certs/keystore.jks
+soapclient.ssl.trust-store=file:/etc/ssl/certs/trust.jks
+soapclient.ssl.key-store=file:/etc/ssl/certs/OSGP.pfx
 soapclient.ssl.trust-store-password=1234
 soapclient.ssl.key-store-password=1234
 soapclient.ssl.key-password=1234
