SLIM-2077-option-no-hostname-verifier

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -1,5 +1,5 @@
 soapclient.use.client.auth=true
-#soapclient.default-uri=http://localhost:8080/osgp-secret-management/ws/SecretManagement
+soapclient.use.hostname.verifier=false
 soapclient.default-uri=https://localhost:443/osgp-secret-management/ws/SecretManagement
 soapclient.ssl.trust-store=file:/etc/ssl/certs/trust.jks
 soapclient.ssl.key-store=file:/etc/ssl/certs/OSGP.pfx
