--- a/super/pom.xml
+++ b/super/pom.xml
@@ -234,6 +234,11 @@
       </dependency>
       <dependency>
         <groupId>org.opensmartgridplatform</groupId>
+        <artifactId>osgp-ws-secret-management</artifactId>
+        <version>${osgp.shared.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.opensmartgridplatform</groupId>
         <artifactId>osgp-ws-smartmetering</artifactId>
         <version>${osgp.shared.version}</version>
       </dependency>
