--- a/integration-tests/cucumber-tests-platform-distributionautomation/pom.xml
+++ b/integration-tests/cucumber-tests-platform-distributionautomation/pom.xml
@@ -103,6 +103,10 @@
     <!-- OSGP -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-kafka-distributionautomation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>cucumber-tests-core</artifactId>
       <type>test-jar</type>
     </dependency>
