--- a/integration-tests/cucumber-tests-platform-distributionautomation/src/test/resources/cucumber-tests-platform-distributionautomation.properties
+++ b/integration-tests/cucumber-tests-platform-distributionautomation/src/test/resources/cucumber-tests-platform-distributionautomation.properties
@@ -28,12 +28,12 @@ web.service.notification.port=8088
 # kafka peak shaving
 peakshaving.kafka.common.properties.prefix=peakshaving.kafka
 peakshaving.kafka.bootstrap.servers=localhost:9092
-peakshaving.kafka.topic=g_osgp_distributionautomation_peakshaving_dev
+peakshaving.kafka.topic=m_LvMeasurementPublishedEventGXF_dev
 
 peakshaving.kafka.consumer.wait.fail.duration:90000
 
 peakshaving.kafka.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-peakshaving.kafka.consumer.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+peakshaving.kafka.consumer.value.deserializer=org.opensmartgridplatform.adapter.kafka.da.serialization.GridMeasurementPublishedEventDeserializer
 peakshaving.kafka.consumer.group.id=PeakShavingCucumberConsumer
 peakshaving.kafka.consumer.enable.auto.commit=true
 peakshaving.kafka.consumer.poll.timeout=3000
