--- a/super/pom.xml
+++ b/super/pom.xml
@@ -791,6 +791,12 @@
         <version>${junit.version}</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
       <!-- Cucumber tests depend on JUnit 4, add the vintage engine -->
       <dependency>
         <groupId>org.junit.vintage</groupId>
