--- a/osgp/protocol-adapter-mqtt/pom.xml
+++ b/osgp/protocol-adapter-mqtt/pom.xml
@@ -11,7 +11,7 @@
 
   <artifactId>protocol-adapter-mqtt</artifactId>
   <groupId>org.opensmartgridplatform</groupId>
-  <version>5.1.1-SNAPSHOT</version>
+  <version>5.1.1</version>
   <packaging>pom</packaging>
   <name>protocol-adapter-mqtt</name>
 
