--- a/osgp/shared/osgp-kafka-logger/pom.xml
+++ b/osgp/shared/osgp-kafka-logger/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
-    <version>5.2.1-SNAPSHOT</version>
+    <version>5.2.1</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
