--- a/integration-tests/cucumber-tests-platform-common/pom.xml
+++ b/integration-tests/cucumber-tests-platform-common/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-integration-tests</artifactId>
-    <version>5.2.2-SNAPSHOT</version>
+    <version>5.2.2</version>
     <relativePath>../parent-integration-tests/pom.xml</relativePath>
   </parent>
 
