--- a/osgp/protocol-adapter-dlms/osgp-jasper-interface/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-jasper-interface/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-dlms</artifactId>
-    <version>5.2.2-SNAPSHOT</version>
+    <version>5.2.2</version>
     <relativePath>../parent-pa-dlms/pom.xml</relativePath>
   </parent>
 
