--- a/public-lighting-demo-app/web-demo-app/pom.xml
+++ b/public-lighting-demo-app/web-demo-app/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-os-webapps</artifactId>
-    <version>5.2.2-SNAPSHOT</version>
+    <version>5.2.2</version>
     <relativePath>../parent-os-webapps/pom.xml</relativePath>
   </parent>
 
