FLEX-5300 ~ Adds 60870-5-104 LMD connection monitoring
Makes sure connections are kept active for the light measurement devices
with protocol IEC 60870-5-104.

Adds DeviceConnection104LmdScheduledTask, a scheduled task that ensures
connections with (the gateways of) the IEC 60870-5-104 light measurement
devices.

Changes may probably be required when requests to the IEC 60870-5-104
light measurement devices will be handled from the web service layer.
This has not been addressed for FLEX-5300 since another item already is
on the backlog to make sure the correlation UID is kept between request
and response (FLEX-5349), which needs to be dealt with before the web
service responses can be matched with requests at all.

--- a/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
+++ b/osgp/platform/osgp-adapter-domain-publiclighting/src/main/resources/osgp-adapter-domain-publiclighting.properties
@@ -84,10 +84,20 @@ jms.get.power.usage.history.response.time.to.live=3600000
 scheduling.task.device.connection.cron.expression=0 */10 * * * *
 # Number of threads in thread pool.
 scheduling.task.device.connection.pool.size=1
-# Name of the manufacturer (case sensitive) of devices to connect to. 
+# Name of the manufacturer (case sensitive) of devices to connect to.
 scheduling.task.device.connection.manufacturer.name=ABB
 # Maximal allowed age in hours of the latest event / communication for a device.
 scheduling.task.device.connection.max.allowed.age=2
+
+# =========================================================
+# ===   Device Connection settings IEC60870-5-104 LMD   ===
+# =========================================================
+# Interval of scheduled task.
+scheduling.task.device.connection.104.lmd.cron.expression=0 */10 * * * *
+# Number of threads in thread pool.
+scheduling.task.device.connection.104.lmd.pool.size=1
+# Maximal allowed age in hours of the latest communication with a device.
+scheduling.task.device.connection.104.lmd.max.allowed.age=2
 
 
 
@@ -99,7 +109,7 @@ scheduling.task.event.retrieval.cron.expression=0 0/30 0-6,17-23 * * *
 scheduling.task.event.retrieval.cron.timezone=Europe/Amsterdam
 # Number of threads in thread pool.
 scheduling.task.event.retrieval.pool.size=10
-# Name of the manufacturer (case sensitive) of devices to retrieve events for. 
+# Name of the manufacturer (case sensitive) of devices to retrieve events for.
 scheduling.task.event.retrieval.manufacturer.name=KAIFA
 # Maximal allowed age in hours of the latest event / communication for a device.
 scheduling.task.event.retrieval.max.allowed.age=24
