--- a/osgp/protocol-adapter-oslp/pom.xml
+++ b/osgp/protocol-adapter-oslp/pom.xml
@@ -14,7 +14,7 @@
 
   <artifactId>protocol-adapter-oslp</artifactId>
   <groupId>org.opensmartgridplatform</groupId>
-  <version>5.1.3-SNAPSHOT</version>
+  <version>5.1.3</version>
   <packaging>pom</packaging>
 
   <properties>
