--- a/osgp/shared/osgp-dto/pom.xml
+++ b/osgp/shared/osgp-dto/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
-    <version>5.1.3-SNAPSHOT</version>
+    <version>5.1.3</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
