--- a/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/src/main/resources/osgp-simulator-protocol-mqtt.properties
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/src/main/resources/osgp-simulator-protocol-mqtt.properties
@@ -1,3 +1,3 @@
 mqtt.simulator.spec = mqtt_simulator_peak_shaving_spec.json
 # Start a client publishing the messages from the JSON spec or not
-mqtt.simulator.startClient = false
+mqtt.simulator.startClient = true
