--- a/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/pom.xml
@@ -241,5 +241,17 @@
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>3.5.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.5.11</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
