--- a/osgp/platform/pom.xml
+++ b/osgp/platform/pom.xml
@@ -115,6 +115,10 @@
     <module>osgp-adapter-domain-tariffswitching</module>
     <module>osgp-adapter-domain-smartmetering</module>
 
+    <!-- kafka -->
+    <module>osgp-adapter-kafka-distributionautomation</module>
+    <module>osgp-adapter-kafka-logging</module>
+
     <!-- Webservice -->
     <module>osgp-adapter-ws-shared</module>
     <module>osgp-adapter-ws-shared-db</module>
