SLIM-2743 framecounter and update of jdlms library to 1.7.1 snapshot

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/pom.xml
@@ -82,6 +82,7 @@
     <dependency>
       <groupId>org.openmuc</groupId>
       <artifactId>jdlms</artifactId>
+      <version>1.7.1-SNAPSHOT</version>
     </dependency>
 
     <!-- OSGP -->
