--- a/integration-tests/cucumber-tests-platform/src/test/resources/cucumber-tests-platform.properties
+++ b/integration-tests/cucumber-tests-platform/src/test/resources/cucumber-tests-platform.properties
@@ -56,5 +56,5 @@ web.service.truststore.password=123456
 web.service.truststore.type=jks
 
 #firmware file location for loading firmware files into the DB
-firmware.file.path=/var/www/html/firmware
+firmware.file.path=D:/workspaces/alliander/test
 
