--- a/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/pom.xml
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-mqtt</artifactId>
-    <version>5.3.0-SNAPSHOT</version>
+    <version>5.3.0</version>
     <relativePath>../parent-pa-mqtt/pom.xml</relativePath>
   </parent>
 
