SLIM-2743 add repo

--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/pom.xml
@@ -78,6 +78,7 @@
     </plugins>
   </build>
 
+  <!-- This repository was added to be able to draw the snapshot jDLMS version from artifactory -->
   <repositories>
     <repository>
       <snapshots/>
