--- a/osgp/platform/osgp-secret-management/src/main/resources/osgp-secret-management.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/osgp-secret-management.properties
@@ -2,6 +2,7 @@
 component.name=osgp-secret-management
 jre.encryption.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secret-management-jre.key
 soap.public.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-protocol-adapter-rsa-public.key
+#Provider used for new key generation
 encryption.provider.type=HSM
 
 #hsm.keystore.resource=file:/etc/ssl/certs/houston.keystore
