--- a/integration-tests/cucumber-tests-platform-publiclighting/pom.xml
+++ b/integration-tests/cucumber-tests-platform-publiclighting/pom.xml
@@ -113,6 +113,14 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- Lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- OSGP -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
