FLEX-3787 ~ Removes power usage functionality.
Removes get actual power usage and get power usage history functionaly from platform, test-suite and simulator.

--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -223,9 +223,6 @@ scheduling.scheduled.tasks.cron.expression=0 */1 * * * ?
 
 scheduling.task.page.size=100
 
-# Custom time to live for get power usage history request messages (3600000 milliseconds = 1 hour)
-jms.get.power.usage.history.request.time.to.live=3600000
-
 # Max count to retry the failed response
 max.retry.count=3
 
@@ -234,7 +231,7 @@ max.retry.count=3
 # === LIGHT MEASUREMENT CONFIG                          ===
 # =========================================================
 
-# The grid operator organisation.
+# The grid operator organization.
 netmanagement.organisation=test-org
 
 
@@ -250,7 +247,7 @@ device.network.address.cleanup.never=false
 # This allows to configure ranges of addresses of simulators which run
 # on different ports of the same host, as one example of a scenario this
 # could be used with.
-# Notice that there is no need to configure the loopback address (for
+# Notice that there is no need to configure the loop-back address (for
 # instance 127.0.0.1) as an exception, since this is always allowed as
 # the network address of multiple devices (assumed to be simulated for
 # the purpose of running tests on a machine).
