OC-667: Addresses review comments.

--- a/osgp/platform/osgp-adapter-kafka-logging/src/main/resources/osgp-adapter-kafka-logging.properties
+++ b/osgp/platform/osgp-adapter-kafka-logging/src/main/resources/osgp-adapter-kafka-logging.properties
@@ -20,7 +20,7 @@ peakshaving.kafka.consumer.auto.offset.reset=latest
 # KAFKA CONFIG GRID MEASUREMENT PUBLISHED EVENT LOGGING CONSUMER
 # ==================================================================
 
-scada.measurement.published.event.kafka.logging.enabled=true
+scada.measurement.published.event.kafka.logging.enabled=false
 
 scada.measurement.published.event.kafka.common.properties.prefix=scada.measurement.published.event.kafka
 scada.measurement.published.event.kafka.bootstrap.servers=localhost:9092
