FLEX-5527: Added reboot functionality including error handling

--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/pom.xml
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/pom.xml
@@ -210,6 +210,13 @@
       <artifactId>netty-all</artifactId>
     </dependency>
 
+    <!-- Lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- Apache ActiveMQ -->
     <dependency>
       <groupId>org.apache.activemq</groupId>
