FLEX-5527: Added soap fault check in cucumber feature test

--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -83,6 +83,8 @@ firmware.path=firmware
 paging.maximum.pagesize=30
 paging.default.pagesize=15
 
+device.pendingsetschedulerequest.expiration_time=10
+
 
 # =========================================================
 # MESSAGING CONFIG
