Fixes name for ABB light measurement RTU in IEC61850 simulator properties.

--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/light-measurement-rtu.properties
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/light-measurement-rtu.properties
@@ -2,5 +2,5 @@
 # to use these properties instead of application.properties
 rtu.port=60102
 rtu.icd=/etc/osp/FlexOVL_540_170713_1_out_testing_unbuffered.icd
-rtu.serverName=TEMPLATE
+rtu.serverName=AA1TH01
 rtu.stopGeneratingValues=true
