FLEX-5527: renamed property expiration_time to expires_in_minutes

--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -83,7 +83,7 @@ firmware.path=firmware
 paging.maximum.pagesize=30
 paging.default.pagesize=15
 
-device.pendingsetschedulerequest.expiration_time=10
+device.pendingsetschedulerequest.expires_in_minutes=10
 
 
 # =========================================================
