improved cucumber tests, logging and exception handling

--- a/integration-tests/cucumber-tests-platform-smartmetering/pom.xml
+++ b/integration-tests/cucumber-tests-platform-smartmetering/pom.xml
@@ -159,11 +159,11 @@
       <artifactId>osgp-adapter-ws-smartmetering</artifactId>
       <classifier>classes</classifier>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.opensmartgridplatform</groupId>-->
-<!--      <artifactId>osgp-secret-management</artifactId>-->
-<!--      <classifier>classes</classifier>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-secret-management</artifactId>
+      <classifier>classes</classifier>
+    </dependency>
 
     <!-- Automatic tests platform -->
     <dependency>
