FLEX-5568: Puts the scada measurement published event in an envelope.

--- a/osgp/platform/osgp-adapter-kafka-logging/src/main/resources/osgp-adapter-kafka-logging.properties
+++ b/osgp/platform/osgp-adapter-kafka-logging/src/main/resources/osgp-adapter-kafka-logging.properties
@@ -27,7 +27,7 @@ scada.measurement.published.event.kafka.bootstrap.servers=localhost:9092
 scada.measurement.published.event.kafka.topic=m_LvMeasurementPublishedEventGXF_dev
 
 scada.measurement.published.event.kafka.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-scada.measurement.published.event.kafka.consumer.value.deserializer=org.opensmartgridplatform.adapter.kafka.da.serialization.ScadaMeasurementPublishedEventDeserializer
+scada.measurement.published.event.kafka.consumer.value.deserializer=org.opensmartgridplatform.adapter.kafka.da.serialization.MessageDeserializer
 scada.measurement.published.event.kafka.consumer.group.id=LvMeasurementPublishedEventGxfLoggingConsumer
 scada.measurement.published.event.kafka.consumer.enable.auto.commit=true
 scada.measurement.published.event.kafka.consumer.poll.timeout=3000
