--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -83,6 +83,8 @@ firmware.path=firmware
 paging.maximum.pagesize=30
 paging.default.pagesize=15
 
+device.pendingsetschedulerequest.expires_in_minutes=10
+
 
 # =========================================================
 # MESSAGING CONFIG
