--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -68,9 +68,14 @@ oslp.execute.resume.schedule.after.set.light=true
 oslp.execute.reboot.after.set.configuration=true
 
 # Default GPS coordinates for switch devices in case specific location
-# information is not (yet) available for a device. 
+# information is not (yet) available for a device.
 oslp.default.latitude=52.132635
 oslp.default.longitude=5.291266
+
+# Netty LogLevel: TRACE, DEBUG, INFO, WARN, ERROR
+oslp.netty.log.level=INFO
+# Netty ByteBufFormat: SIMPLE (logging without hex dump), HEX_DUMP
+oslp.netty.byte.buf.format=SIMPLE
 
 # Local time zone for the switch devices.
 local.time.zone=Europe/Paris
@@ -117,7 +122,7 @@ jms.outgoing.log.item.requests.time.to.live=86400000
 #----------------------------------------------------------
 # jms.outgoing.osgp.core.requests
 #----------------------------------------------------------
-jms.outgoing.osgp.core.requests.queue=osgp-core.1_0.protocol-oslp-elster.1_0.requests 
+jms.outgoing.osgp.core.requests.queue=osgp-core.1_0.protocol-oslp-elster.1_0.requests
 jms.outgoing.osgp.core.requests.time.to.live=180000
 
 #----------------------------------------------------------
