--- a/osgp/shared/osgp-dto/pom.xml
+++ b/osgp/shared/osgp-dto/pom.xml
@@ -42,6 +42,10 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
