--- a/integration-tests/cucumber-tests-platform-smartmetering/src/test/resources/cucumber-tests-platform-smartmetering.properties
+++ b/integration-tests/cucumber-tests-platform-smartmetering/src/test/resources/cucumber-tests-platform-smartmetering.properties
@@ -3,6 +3,7 @@
 db.name.osgp_adapter_ws_smartmetering=osgp_adapter_ws_smartmetering
 db.name.osgp_adapter_protocol_dlms=osgp_adapter_protocol_dlms
 db.name.secret_management=osgp_secret_management
+encryption.provider.type=JRE
 entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.ws.smartmetering.domain.entities,org.opensmartgridplatform.adapter.ws.domain.entities
 entitymanager.packages.to.scan.dlms=org.opensmartgridplatform.adapter.protocol.dlms.domain.entities
 entitymanager.packages.to.scan.secret_management=org.opensmartgridplatform.secretmanagement.application.domain
