FLEX-5537 ~ Makes ChannelCache expiration time configurable

--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -46,6 +46,11 @@ oslp.concurrent.client.connections.limit.active=false
 # The maximum number of concurrent client connections which the protocol adapter will open
 oslp.concurrent.client.connections.maximum=30
 
+# The number of milliseconds before channels in the ChannelCache become
+# eligible to be removed from the cache counting from the time they were
+# added.
+oslp.channel.cache.expiration.millis=86400000
+
 #ECDSA security
 oslp.security.keytype=EC
 oslp.security.signature=SHA256withECDSA
