SLIM-2597 property comment wrt HSM usage

--- a/osgp/platform/osgp-secret-management/src/main/resources/osgp-secret-management.properties
+++ b/osgp/platform/osgp-secret-management/src/main/resources/osgp-secret-management.properties
@@ -4,7 +4,7 @@ jre.encryption.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-secre
 soap.public.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-protocol-adapter-rsa-public.key
 #Provider used for in-memory and DB encryption (JRE/HSM)
 encryption.provider.type=JRE
-
+#Only set this property when using a HSM
 #hsm.keystore.resource=file:/etc/ssl/certs/houston.keystore
 
 #PostgreSQL
