--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -8,6 +8,7 @@ soapclient.ssl.key-store-password=1234
 soapclient.ssl.key-password=1234
 
 encryption.soap.rsa.private.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-protocol-adapter-rsa-private.key
+encryption.soap.rsa.public.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-protocol-adapter-rsa-public.key
 #AES encryption key used for protocol adapter in-memory
 encryption.key.path=/etc/osp/smartmetering/keys/platform/secret.aes
 #Database Configuration
