FLEX-5537 Investigate OSLP messages with unknown device UID (#477)
* FLEX-5537 ~ Adds OslpDecoder unit tests

Adds unit tests to verify that the OslpDecoder works properly, even if
the necessary bytes come in unexpected patterns (like partial chunks,
simulating some kind of bad connection).

* FLEX-5537 ~ Enables OslpDecoder to decode multiple OslpEnvelopes

Adds a test with a channel handling input for multiple OslpEnvelope
values.
Updates the OslpDecoder not to break after processing the first
OslpEnvelope. Consecutive messages can be decoded now the DONE state is
removed. Output of the decoded message and a reset of the decoding
related fields is implemented as part of the last step that actually
processes some input.

Changes the OslpDecoder to be a little more in line with the example of
the ReplayingDecoder with enum state from the javadocs.
Avoids reading or updating of the reader index of the ByteBuf that is
decoded, leaving these details with the base class provided by the
library.

* FLEX-5537 ~ Reduces number of lines in OslpDecoder switch case

Reduces the number of lines in the OslpDecoder switch case for the
PAYLOAD_MESSAGE based on a SonarQube warning.
Refactors release of temporary ByteBuf in readBytes, so it always
happens, even with unexpected exceptions from getBytes.

* FLEX-5537 ~ Makes hex dump logging in Netty LoggingHandler configurable

Removes the OslpLoggingHandler, as logging the hex dump is configurable
in a recent Netty LoggingHandler by specifying a ByteBufFormat. Being
able to turn hex dump logging on or off was the only reason that the
OslpLoggingHandler was created.

Instead of needing to change the code to turn hex dump logging on or off
some settings are introduced to configure the logging level and whether
to include hex dumps.

* FLEX-5537 ~ Changes OslpChannelHandlerServer to fix memory leak

OslpChannelHandlerServer no longer tracks channels to send signed
responses in a map that reta

--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -46,6 +46,11 @@ oslp.concurrent.client.connections.limit.active=false
 # The maximum number of concurrent client connections which the protocol adapter will open
 oslp.concurrent.client.connections.maximum=30
 
+# The number of milliseconds before channels in the ChannelCache become
+# eligible to be removed from the cache counting from the time they were
+# added.
+oslp.channel.cache.expiration.millis=86400000
+
 #ECDSA security
 oslp.security.keytype=EC
 oslp.security.signature=SHA256withECDSA
@@ -68,9 +73,14 @@ oslp.execute.resume.schedule.after.set.light=true
 oslp.execute.reboot.after.set.configuration=true
 
 # Default GPS coordinates for switch devices in case specific location
-# information is not (yet) available for a device. 
+# information is not (yet) available for a device.
 oslp.default.latitude=52.132635
 oslp.default.longitude=5.291266
+
+# Netty LogLevel: TRACE, DEBUG, INFO, WARN, ERROR
+oslp.netty.log.level=INFO
+# Netty ByteBufFormat: SIMPLE (logging without hex dump), HEX_DUMP
+oslp.netty.byte.buf.format=SIMPLE
 
 # Local time zone for the switch devices.
 local.time.zone=Europe/Paris
@@ -117,7 +127,7 @@ jms.outgoing.log.item.requests.time.to.live=86400000
 #----------------------------------------------------------
 # jms.outgoing.osgp.core.requests
 #----------------------------------------------------------
-jms.outgoing.osgp.core.requests.queue=osgp-core.1_0.protocol-oslp-elster.1_0.requests 
+jms.outgoing.osgp.core.requests.queue=osgp-core.1_0.protocol-oslp-elster.1_0.requests
 jms.outgoing.osgp.core.requests.time.to.live=180000
 
 #----------------------------------------------------------
