--- a/super/pom.xml
+++ b/super/pom.xml
@@ -60,7 +60,7 @@
     <spring.ws.version>3.0.9.RELEASE</spring.ws.version>
     <assertj.version>3.16.1</assertj.version>
     <xmlunit.version>1.6</xmlunit.version>
-    <mockito.core.version>3.3.3</mockito.core.version>
+    <mockito.core.version>3.6.0</mockito.core.version>
     <apache.wss4j.version>1.6.19</apache.wss4j.version>
     <servlet.version>4.0.1</servlet.version>
     <servlet.jstl.version>1.2</servlet.jstl.version>
@@ -846,6 +846,12 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
+        <version>${mockito.core.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-inline</artifactId>
         <version>${mockito.core.version}</version>
         <scope>test</scope>
       </dependency>
