--- a/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/pom.xml
@@ -58,7 +58,7 @@
 
     <jxr.version>3.0.0</jxr.version>
     <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
-    <maven.site.plugin>3.7.1</maven.site.plugin>
+    <maven.site.plugin>3.9.0</maven.site.plugin>
 
   </properties>
 
@@ -167,6 +167,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <version>${maven.site.plugin}</version>
       </plugin>
 
     </plugins>
