--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/pom.xml
@@ -59,7 +59,7 @@
 
     <jxr.version>3.0.0</jxr.version>
     <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
-    <maven.site.plugin>3.7.1</maven.site.plugin>
+    <maven.site.plugin>3.9.0</maven.site.plugin>
   </properties>
 
   <dependencies>
@@ -149,6 +149,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <version>${maven.site.plugin}</version>
       </plugin>
     </plugins>
 
