--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -3,34 +3,29 @@
 # =========================================================
 
 # =========================================================
-# COMMUNICATION MONITORING CONFIG
+# SCHEDULING CONFIG
 # =========================================================
-# These values are used for configuration of the communication monitoring task
-# If values are not present (or set) 
-# then the application will use the defaults values below
+# Scheduling feature flag
+osgp.scheduling.enabled=true
 
+quartz.scheduler.thread.count=2
+
+# ---------------------------------------------------------
+# communication monitoring job
+# ---------------------------------------------------------
+# Values used for configuration of the communication monitoring job
 # Configures communication monitoring. Set to true for enabling, set to false for disabling 
 communication.monitoring.enabled=true
 
-# Configures the minimum time between task runs, 
-# to prevent multiple domain adapters to run the task at the same time (time in minutes)
-communication.monitoring.minimum.time.between.runs=1
-
 # Configures the scheduled times for the task to run
 #communication.monitoring.cron.expression=0 */5 * * * *
-communication.monitoring.cron.expression=0 */1 * * * *
+communication.monitoring.cron.expression=0 */1 *   * * ?
 
-# Configures the thread pool size for the scheduler
-#communication.monitoring.scheduler.pool.size=1
-
-# Configures the thread name prefix for the scheduler
-#communication.monitoring.scheduler.thread.name.prefix=da-communication-monitoring-
+# Configures the interval for updating the last communication time for the devices (time in seconds)
+communication.monitoring.last.communication.update.interval=30
 
 # Configures the maximum allowed time without communication for the devices (time in minutes)
 communication.monitoring.maximum.time.without.communication=1
-
-# Configures the interval for updating the last communication time for the devices (time in seconds)
-#communication.monitoring.last.communication.update.interval=30
 
 # =========================================================
 # PERSISTENCE CONFIG 
