--- a/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-domain-distributionautomation/src/main/resources/osgp-adapter-domain-distributionautomation.properties
@@ -14,18 +14,23 @@ quartz.scheduler.thread.count=2
 # communication monitoring job
 # ---------------------------------------------------------
 # Values used for configuration of the communication monitoring job
-# Configures communication monitoring. Set to true for enabling, set to false for disabling 
+
+# Configures communication monitoring.
+# Set to true for enabling, set to false for disabling
 communication.monitoring.enabled=true
 
 # Configures the scheduled times for the task to run
-#communication.monitoring.cron.expression=0 */5 * * * *
-communication.monitoring.cron.expression=0 */1 *   * * ?
+# defaults to every 5 minutes [0 */5 * * * ?] if not supplied here
+communication.monitoring.cron.expression=0 */1 * * * ?
 
-# Configures the interval for updating the last communication time for the devices (time in seconds)
-communication.monitoring.last.communication.update.interval=30
+# Configures the minumum duration between updating the last communication time for the devices
+# Should be configured to be less than the maximum duration without communication.
+# defaults to 1 minute [PT1M] if not supplied here
+communication.monitoring.minimum.duration.between.communication.time.updates=PT30S
 
-# Configures the maximum allowed time without communication for the devices (time in minutes)
-communication.monitoring.maximum.time.without.communication=1
+# Configures the maximum allowed duration without communication for the devices
+# defaults to 5 minutes [PT5M] if not supplied here
+communication.monitoring.maximum.duration.without.communication=PT1M
 
 # =========================================================
 # PERSISTENCE CONFIG 
