--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/pom.xml
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/pom.xml
@@ -204,6 +204,16 @@
       <artifactId>orika-core</artifactId>
     </dependency>
 
+    <!-- MicroMeter -->
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-jmx</artifactId>
+    </dependency>
+
     <!-- Netty -->
     <dependency>
       <groupId>io.netty</groupId>
@@ -240,6 +250,21 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
