--- a/super/pom.xml
+++ b/super/pom.xml
@@ -105,7 +105,7 @@
     <apache.commons.schema>2.2.5</apache.commons.schema>
     <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
     <netty.version>4.1.53.Final</netty.version>
-    <openmuc.jdlms.version>1.6.1</openmuc.jdlms.version>
+    <openmuc.jdlms.version>1.7.1</openmuc.jdlms.version>
     <beanit.openiec61850.version>1.8.0</beanit.openiec61850.version>
     <openmuc.j60870.version>1.3.1</openmuc.j60870.version>
     <javax.inject.version>1</javax.inject.version>
@@ -116,7 +116,7 @@
     <cxf.version>3.4.1</cxf.version>
     <quartz.version>2.3.2</quartz.version>
     <hikaricp.version>3.4.5</hikaricp.version>
-    <micrometer.version>1.5.1</micrometer.version>
+    <micrometer.version>1.6.3</micrometer.version>
     <protobuf.version>2.4.1</protobuf.version>
     <guava.version>29.0-jre</guava.version>
     <spotbugs.version>4.0.4</spotbugs.version>
@@ -885,7 +885,7 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
           </exclusion>
-	    </exclusions>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.scala-lang</groupId>
@@ -963,6 +963,11 @@
       <dependency>
         <groupId>io.micrometer</groupId>
         <artifactId>micrometer-registry-prometheus</artifactId>
+        <version>${micrometer.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-registry-jmx</artifactId>
         <version>${micrometer.version}</version>
       </dependency>
 
