LSM-6 ~ Adds low voltage message signing and verification
Adds MessageSigner to be configured with at least one of two keys: a
private key for message signing or a public for signature verification.
This MessageSigner is used with the producer and the consumer of Kafka
Avro messages for low voltage.

The producer only needs the private signing key, but in the test setup
the public verification key is configured to be able to include the
verification in the test scenario.
The consumer only needs the public verification key, but in the test
setup the private signing key is configured to be able to include the
verification in the test scenario.

Updates the Kafka low voltage message producer to sign the Avro messages
that it sends to its topic.
Updates the Kafka low voltage message consumer to log warnings if it
notices a consumed message can not be verified.

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -55,6 +55,12 @@ distributionautomation.kafka.topic=m_LvMeasurementPublishedEventGXF_dev
 distributionautomation.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 distributionautomation.kafka.producer.value.serializer=org.opensmartgridplatform.adapter.kafka.da.serialization.MessageSerializer
 
+distributionautomation.kafka.message.signature.algorithm=SHA256withRSA
+distributionautomation.kafka.message.signature.provider=SunRsaSign
+distributionautomation.kafka.message.signature.key.algorithm=RSA
+distributionautomation.kafka.message.signature.key.size=2048
+distributionautomation.kafka.message.signature.key.private=file:/etc/osp/kafka-message-signing/keys/message-signing-rsa-private.pem
+
 # Example Kafka SSL configuration for use in acceptance or production environments
 #distributionautomation.kafka.security.protocol=SSL
 #distributionautomation.kafka.ssl.truststore.location=/etc/osp/kafka/kafka.client.truststore.jks
