OC-679 ~ Cleans up some unused code

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -39,7 +39,7 @@ flyway.init.on.migrate=true
 
 #EntityManager
 #Declares the base package of the entity classes
-entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.ws.domain.entities,org.opensmartgridplatform.adapter.kafka.da.application.entities
+entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.kafka.da.domain.entities
 entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.da.entities,org.opensmartgridplatform.domain.core.entities
 
 # =========================================================
