Processed review comments (Bart and Coen)

--- a/osgp/platform/osgp-adapter-domain-smartmetering/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-smartmetering/pom.xml
@@ -159,6 +159,13 @@
       <artifactId>logback-core</artifactId>
     </dependency>
 
+    <!-- Lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- Servlet API 3.0 -->
     <dependency>
       <groupId>javax.servlet</groupId>
