FLEX-5434 ~ Adds cucumber test for 104 light measurements

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -149,5 +149,6 @@
     <module>cucumber-tests-platform-smartmetering</module>
     <module>cucumber-tests-platform-microgrids</module>
 
+    <module>cucumber-tests-protocol-iec60870</module>
   </modules>
 </project>
