FLEX-5434 ~ Refactored DA cucumber tests to use IEC60870 protocol cucumber project

--- a/integration-tests/cucumber-tests-platform-distributionautomation/pom.xml
+++ b/integration-tests/cucumber-tests-platform-distributionautomation/pom.xml
@@ -126,6 +126,11 @@
     </dependency>
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>cucumber-tests-protocol-iec60870</artifactId>
+      <type>test-jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-adapter-kafka-distributionautomation</artifactId>
       <classifier>classes</classifier>
     </dependency>
