LSM-12 ~ Adds property for enabling or disabling message signing.

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -55,6 +55,7 @@ distributionautomation.kafka.topic=m_LvMeasurementPublishedEventGXF_dev
 distributionautomation.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 distributionautomation.kafka.producer.value.serializer=org.opensmartgridplatform.adapter.kafka.da.serialization.MessageSerializer
 
+distributionautomation.kafka.message.signing.enabled=false
 distributionautomation.kafka.message.signature.algorithm=SHA256withRSA
 distributionautomation.kafka.message.signature.provider=SunRsaSign
 distributionautomation.kafka.message.signature.key.algorithm=RSA
