OC-718 ~ Adds helper class to execute ICMP echo requests
Adds Pinger to the shared networking package, as a helper to perform
ICMP echo requests.

The Pinger uses a CommandBuilder to create the commands to be executed,
customizing command flags to match the ping flavor expected for the
operating system the code is executed on.

The Pinger uses a CommandExecutor to execute the ping command, where a
timeout may be provided to make sure a value (false) is returned when
ping results are not processed before the timeout expires.

--- a/osgp/shared/shared/pom.xml
+++ b/osgp/shared/shared/pom.xml
@@ -194,9 +194,15 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
     </dependency>
 
-    <!-- AssertJ-->
+    <!-- AssertJ -->
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
