Updates configuration for IEC60870 and IEC61850 simulators
- Enables external configuration for IEC60870 when running in Tomcat
- Enables using spring profiles for device types in IEC61850

--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/simulator-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/simulator-iec61850.properties
@@ -1,7 +1,6 @@
+# Some default settings
+# Override when needed in the properties file for the specific profile.
 rtu.port=60102
-rtu.icd=Pampus.icd
-
-rtu.serverName=WAGO61850Server
 rtu.stopGeneratingValues=true
 rtu.updateValuesDelay=2000
 rtu.updateValuesPeriod=10000
