FDP-46 ~ Enables ssl/tls in mqtt simulator
Signed-off-by: Sander van der Heijden <sander.van.der.heijden@cgi.com>

--- a/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/src/main/resources/osgp-simulator-protocol-mqtt.properties
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/src/main/resources/osgp-simulator-protocol-mqtt.properties
@@ -1,3 +1,21 @@
-mqtt.simulator.spec = mqtt_simulator_peak_shaving_spec.json
+mqtt.simulator.spec=mqtt_simulator_peak_shaving_spec.json
 # Start a client publishing the messages from the JSON spec or not
-mqtt.simulator.startClient = false
+mqtt.simulator.startClient=true
+
+mqtt.simulator.ssl.enabled=true
+
+mqtt.simulator.broker.host=localhost
+mqtt.simulator.broker.port=1883
+
+mqtt.simulator.broker.ssl.port=8883
+mqtt.simulator.broker.ssl.provider=JDK
+#mqtt.simulator.broker.ssl.keystore.location=/etc/osp/keys/mqtt/mqtt.server.keystore.jks
+mqtt.simulator.broker.ssl.keystore.location=mqtt_server_keystore.jks
+mqtt.simulator.broker.ssl.keystore.password=123456
+mqtt.simulator.broker.ssl.keymanager.password=123456
+
+#mqtt.simulator.client.ssl.truststore.location=/etc/osp/keys/mqtt/mqtt.client.truststore.jks
+mqtt.simulator.client.ssl.truststore.location=mqtt_client_truststore.jks
+mqtt.simulator.client.ssl.truststore.password=123456
+mqtt.simulator.client.ssl.truststore.type=JKS
+mqtt.simulator.client.ssl.authentication.enabled=false
