FDP-46 ~ Enables SSL in MQTT protocol adapter
Signed-off-by: Sander van der Heijden <sander.van.der.heijden@cgi.com>

--- a/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
@@ -31,9 +31,17 @@ flyway.init.on.migrate=true
 entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.protocol.mqtt.domain.entities
 
 # MQTT
-mqtt.broker.defaultPort=8883
-mqtt.broker.defaultTopics=+/measurement,+/congestion
-mqtt.broker.defaultQos=AT_LEAST_ONCE
+mqtt.default.host=localhost
+mqtt.default.port=8883
+mqtt.default.qos=AT_LEAST_ONCE
+mqtt.default.topics=+/measurement,+/congestion
+
+mqtt.ssl.enabled=true
+mqtt.ssl.client.truststore.location=/etc/osp/keys/mqtt/mqtt_client_truststore.jks
+#mqtt.ssl.client.truststore.location=mqtt_client_truststore.jks
+mqtt.ssl.client.truststore.password=123456
+mqtt.ssl.client.truststore.type=JKS
+mqtt.ssl.client.authentication.enabled=false
 
 # =========================================================
 # MESSAGING CONFIG
